tests/errors/output/polymorphic_01_typecheck.t
Can't pass value to function parameter